# FFEA

./: .gitignore  CMakeLists.txt  COPYING  CTestCustom.in  ChangeLog.md  Doxygen.in  DoxygenPyM.in  INSTALL.md  README.md  asshole.txt  bumsniff.txt  conf.py  install.sh  pre-commit  setup.py  sonar-project.properties  stuff_to_do_for_release.txt
2.0/: CMakeLists.txt
2.0/FFEA_tools/: FFEA_tools.py
2.0/FFEA_tools/OLD_convert_to_walrus/: convert_tetrahedra_linear_to_quadratic.py
2.0/include/: BiCGSTAB_solver.h  Blob.h  ConnectivityTypes.h  FFEA_return_codes.h  Face.h  GaussianQuadrature_tri.h  KineticStates.h  NearestNeighbourLinkedListCube.h  NodeMap.h  SecondOrderFunctions.h  SimulationParams.h  Solver.h  SparseMatrixFixedPattern.h
2.0/src/: Blob.cpp  FFEA_input_reader.cpp  Face.cpp  Makefile  SimulationParams.cpp  SparseMatrixFixedPattern.cpp  World.cpp  World_new.cpp  World_old.cpp  ffea.cpp  mat_vec_fns.cpp  tetra_element_linear.cpp
2.0/test/sphere_63_120_mass/: sphere_63_120_mass.ffea
2.0/test/sphere_63_120_nomass/: sphere_63_120_nomass.ffea
2.0/test/sphere_63_120_structure/: sphere_63_120.node  sphere_63_120.vdw
2.0/test/sphere_63_120_two/: sphere_63_120_two.ffea
2.0/test/sphere_63_120_two_vdw/: sphere_63_120_two_vdw.ffea
FFEA_tools/: CMakeLists.txt  FFEA_tools.in  FFEA_tools.py  __init__.py  emdb_to_walrus.py
FFEA_tools/FFEA_analysis/: CMakeLists.txt  FFEA_build_analysis_environment.py  FFEA_plot_all_measurements.py
FFEA_tools/FFEA_analysis/Diffusion_analysis/: FFEA_analyse_diffusion.py  FFEA_compare_diffusion_to_sphere.py
FFEA_tools/FFEA_analysis/Euler_characteristic_analysis/: CMakeLists.txt
FFEA_tools/FFEA_analysis/FFEA_gromacs/: plot_equiibration.py  plot_pressure_equiibration.py
FFEA_tools/FFEA_analysis/FFEA_meas/: FFEA_meas.py
FFEA_tools/FFEA_analysis/FFEA_meas_tools/: am_I_equilibrated.py  myosin_analysis.py  myosin_analysis_lib.py  test_equilibration.py
FFEA_tools/FFEA_analysis/FFEA_pyPca/: FFEA_compare_modes.py  FFEA_convert_FFEA_to_atomic.py  FFEA_convert_traj_to_mdcrd  FFEA_convert_traj_to_mdcrd.cpp  FFEA_get_PCA_eigensystem.py  FFEA_get_pca_animations.py  FFEA_get_pca_animations.py~  FFEA_test_convergence.py  plot_eigensystem_comparison.py
FFEA_tools/FFEA_initialise/: CMakeLists.txt  FFEA_build_simulation_environment.py  FFEA_rerun.py
FFEA_tools/OLD_convert_to_walrus/: DAT_to_walrus.py  calculate_element_connectivity.py  convert_all_to_walrus.py  make_all_normals_point_outwards.py  netgen_to_walrus.py  put_surface_elements_first.py  put_surface_nodes_first.py  scale.py
FFEA_tools/OLD_extract/: extract  extract.c  make_dx_map.py  make_dx_map_smooth.py  makefile  traj_to_dx.py
FFEA_tools/align_point_clouds/: rofl2.vmd  vmdscene.tga
FFEA_tools/all/: FFEA_tools.py
FFEA_tools/analysis_scripts/: FFEA_plot_blob_data.m  FFEA_plot_everything.py  FFEA_plot_world_data.m  dynein_position_analysis.m  dynein_position_analysis.py
FFEA_tools/compare_modes/: dot_plot_ENM_FFEA.eps  extract_nth_pdb_frame.py
FFEA_tools/convert_scripts/: convert_obj_to_FFEA_surf.py
FFEA_tools/convert_to_FFEA/: calc_homo_stokes_file.py  convert_all_to_FFEA.py  make_default_script.py
FFEA_tools/extract/: extract  extract.c  ffea_traj_to_xyz  ffea_traj_to_xyz.c  makefile  xyz_to_dx_map.py
FFEA_tools/ffea_stuff/: move_into_box.py
FFEA_tools/make_cuboid_mesh/: make_cuboid_mesh
FFEA_tools/modules/: Dynein-A_1_new.surf  FFEA_traj.py  FFEA_trajectory.py  FFEA_trajectory.py~  FFEA_trajectory_analyser.py  Nodes.py  Vectors.py  Vectors.py~  test.py  test.py~  test_output.txt
FFEA_tools/pca/: do_pca.py  walrus_to_x.c
FFEA_tools/pdb_stuff/: pdb_calc_centroid.py~  pdb_chain_convert.py
FFEA_tools/pyFFEA/: pyFFEA.py
FFEA_tools/structure_mapping/: create_structure_map.cpp
FFEA_tools/surf_stuff/: translate_surf.py~
FFEA_tools/surface_coarse_grainer/: Dynein-A_1.surf  netgen_surface_coarse_grainer.py  netgen_surface_coarse_grainer_by_radius.py  new_surface_coarse_grainer.cpp  surface_coarse_grainer_12122014.cpp  surface_coarse_grainer_final  surface_coarse_grainer_final.cpp  test.surf
FFEA_tools/traj_to_pdb/: ffea_traj_to_pdb
FFEA_tools/vdw_stuff/: change_type.py~  reset_vdw.py
FFEA_tools/vol_stuff/: Dynein-A_1.vol
ffeatools/: CMakeLists.txt  FFEA_tools.in  FFEA_tools.py  __init__.py  enthusiasm.py  ffeatools.in  ffeatools.py  ffeatoolsScript.py  setup.py
ffeatools/FFEA_analysis/: CMakeLists.txt  FFEA_build_analysis_environment.py  FFEA_thin_system.py  __init__.py
ffeatools/FFEA_initialise/: CMakeLists.txt  FFEA_automodel.py  FFEA_build_simulation_environment.py  __init__.py
ffeatools/modules/: CMakeLists.txt  FFEA_beads.py  FFEA_binding_sites.py  FFEA_ctforces.py  FFEA_exceptions.py  FFEA_frame.py  FFEA_kinetic_map.py  FFEA_kinetic_rates.py  FFEA_kinetic_states.py  FFEA_lj.py  FFEA_material.py  FFEA_measurement.py  FFEA_meta.py  FFEA_node.py  FFEA_pdb.py  FFEA_pdb_OLD.py  FFEA_pin.py  FFEA_rod.py  FFEA_script.py  FFEA_skeleton.py  FFEA_springs.py  FFEA_stokes.py  FFEA_surface.py  FFEA_topology.py  FFEA_trajectory.py  FFEA_turbotrajectory.py  FFEA_universe.py  FFEA_vdw.py  __init__.py  wrap.py
src/: .FFEA_user_info.cpp.kate-swp  BEM_Poisson_Boltzmann.cpp  BiCGSTAB_solver.cpp  BiCGSTAB_solver.h  BindingSite.cpp  Blob.cpp  Blob.h  Blob.h~  BlobLite.cpp  CG_solver.cpp  CMakeLists.txt  CheckTetrahedraOverlap.cpp  CheckTetrahedraOverlap_II.cpp  CheckTetrahedraOverlap_orig.cpp  ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  ConjugateGradientSolver.h~  DerivedDatatype.cpp  FFEA_input_reader.cpp  FFEA_input_reader.cpp~  FFEA_return_codes.cpp  FFEA_return_codes.cpp~  FFEA_return_codes.h  FFEA_user_info.cpp  Face.cpp  Face.h  GaussianQuadrature_1d.cpp  GaussianQuadrature_1d.h  GaussianQuadrature_tri.cpp  GaussianQuadrature_tri.h  GenSoftSSINT_solver.cpp  KineticBindingSite.cpp  KineticState.cpp  LJSteric_solver.cpp  LJ_matrix.cpp  LJ_matrix.h~  LinkedListCube.h  LinkedListCube.tpp  Makefile  MassLumpedSolver.cpp  (+51 more)
src/unused/: GaussianQuadrature.h  MersenneTwister.cpp
tests/physics/: CMakeLists.txt  README  run_tests.sh
(+1425 files in other folders)
